--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <div class="topnav">
-    <a class="active" href="home.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="projects.html">Projects</a>
     <a href= "skillsets.html">Skill Sets</a>
