--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 
 <div class="topnav">
-    <a href="home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a class="active" href="projects.html">Projects</a>
     <a href="skillsets.html">Skill Sets</a>
