Finished project and added

--- a/about.html
+++ b/about.html
@@ -8,15 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<div class="topnav">
-    <a href="index.html">Home</a>
-    <a class="active" href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="skillsets.html">Skill Sets</a>
-</div>
+<body>
 
-<h2>About Cade McCarter</h2>
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a class="active" href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="skillsets.html">Skill Sets</a>
+    </div>
 
-<p>Originally from Dallas, Cade is currently a senior at the University of Oklahoma studying finance and management information systems. </p>
+    <h2>About Cade McCarter</h2>
+
+    <img style="width:10%; height:10%" src="https://media.licdn.com/dms/image/D5603AQELuRpPhYnN4A/profile-displayphoto-shrink_400_400/0/1669762251528?e=1706745600&v=beta&t=x0DwI3NQsZf7Yl5Atx6U7LxG-nU7fq88upuALTbOLgU" />
+
+    <p>
+        Originally from Dallas, I am currently a senior here at the University of Oklahoma's Price College of Business, studying both Finance and Management Information Systems while being enrolled in the Honors program.
+        In the three and a half years I've been at the University, I've joined several orgranizations that have allowed me to advance my skills personally and professionally.
+        These organizations include my fraternity, Beta Upsilon Chi, as well as the JCPenney Leadership Program, which takes the top 5% of all Price students.
+    </p>
+
+</body>
 
 </html>
