--- a/projects.html
+++ b/projects.html
@@ -8,19 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a class="active" href="projects.html">Projects</a>
-    <a href="skillsets.html">Skill Sets</a>
-</div>
+<body>
 
-<h2>Past Projects</h2>
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a class="active" href="projects.html">Projects</a>
+        <a href="skillsets.html">Skill Sets</a>
+    </div>
 
-<h4>Database</h4>
-<h5>
-    In Spring of 2023, I enrolled in a course focused on the construction and management of a database. Throughout the semester, our team constructed the database, as well as populated the database using custom inputs designed for an autoshop.
-    The database was then able to read in SQL queries to allow for user designated outputs based on the information stored.
-</h5>
+    <h2>Past Projects</h2>
+
+    <h4>Database</h4>
+    <h5>
+        In Spring of 2023, I enrolled in a course focused on the construction and management of a database. Throughout the semester, our team constructed the database, as well as populated the database using custom inputs designed for an autoshop.
+        The database was then able to read in SQL queries to allow for user designated outputs based on the information stored.
+    </h5>
+    <h4>GitHub</h4>
+    <h5>
+        All of the coding assigments from the past three years have accumulated on my GitHub page, showing the past three years of progress and assignments I've learned and mastered.'
+    </h5>
+    <h4>Personal Website</h4>
+    <h5>
+        This assignment has allowed me to create a fully functioning HTML page from scratch, complementing with a CSS document to create a universal style for the page.
+    </h5>
+
+</body>
 
 </html>
