--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <meta charset="utf-8" />
-    <title>HTML & CSS HWK</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a href= "skillsets.html">Skill Sets</a>
-</div>
-
-<h1>Cade McCarter's Personal Website</h1>
 
 
+    <head>
+        <meta charset="utf-8" />
+        <title>HTML & CSS HWK</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
+    <body>
+
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="projects.html">Projects</a>
+            <a href="skillsets.html">Skill Sets</a>
+        </div>
+
+        <h1>Cade McCarter's Personal Website</h1>
+
+        <h3>Welcome</h3>
+        <p>
+            Thank you for taking the time to visit my personal website. Although the purpose of this website was simply for an assignment,
+            it functions as a way for me to showcase my works developed during my time here at the University of Oklahoma.
+        </p>
+
+        <p>Once again, welcome to my site, and please feel free to use the navigation bar at the top of the page to learn more about my experiences and works.</p>
+
+    </body>
 
 </html>
