--- a/skillsets.html
+++ b/skillsets.html
@@ -8,30 +8,43 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<div class="topnav">
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="projects.html">Projects</a>
-    <a class="active" href="skillsets.html">Skill Sets</a>
-</div>
+<body>
 
-<h2>Skills</h2>
+    <div class="topnav">
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a class="active" href="skillsets.html">Skill Sets</a>
+    </div>
 
-<h3>Experiences</h3>
-<ul>
-    <li>Database Management</li>
-    <li>SQL Query Construction</li>
-</ul>
+    <h2>Skills</h2>
 
-<h3>Certifications</h3>
-<ul>
-    <li>Microsoft PowerBI</li>
-    <li>Bloomberg Market Concepts</li>
-</ul>
+    <h3>Experiences</h3>
+    <ul>
+        <li>Database Management</li>
+        <li>SQL Query Construction</li>
+    </ul>
 
-<h3>Awards</h3>
-<ul>
-    <li>University of Oklahoma Award of Academic Excellence Scholarship</li>
-</ul>
+    <h3>Certifications</h3>
+    <ul>
+        <li>Microsoft PowerBI</li>
+        <li>Bloomberg Market Concepts</li>
+    </ul>
+
+    <h3>Awards</h3>
+    <ul>
+        <li>University of Oklahoma Award of Academic Excellence Scholarship</li>
+        <li>President's Honor Roll (Spring 2023, Spring 2022, Fall 2021, Spring 2021</li>
+        <li>Dean's Honor Roll (Fall 2020, Fall 2022)</li>
+    </ul>
+
+    <h3>Programming Languages Used</h3>
+    <ul>
+        <li>C#</li>
+        <li>VBA</li>
+        <li>SQL</li>
+    </ul>
+
+</body>
 
 </html>
